--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,6 +16,9 @@
     "liveSassCompile.settings.excludeList": [
         "/**/node_modules/**",
         "/.vscode/**",
-        "/public/sb-admin/**"
+        "/public/sb-admin/**",
+        "/public/scss/component/**",
+        "/public/scss/layout/**",
+        "/public/scss/utility/**",
     ]
 }
